--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body {
     font-size: 15pt;
+    margin: 0;
+    padding-top: 0;
+    box-sizing: border-box;
+}
+
+.-tags {
+  outline: 2px solid red;
+  background-color: yellow;
+  padding: 10px;
+  margin: 20px
+}
+
+.heading > * {
+  outline: 1px solid blue;
+}
+
+.paragraph > * {
+  outline: 1px solid blue;
+}
+
+.containers > * {
+  outline: 1px solid blue;
 }
