--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     box-sizing: border-box;
 }
 
+body > h3 {
+    text-align: center;
+    text-decoration: underline;
+}
+
 .-tags {
   outline: 2px solid red;
   background-color: yellow;
